--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "next": "12.1.2",
     "react": "18.0.0",
     "react-beautiful-dnd": "^13.1.0",
