--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "next": "12.1.2",
     "react": "18.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "@types/uuid": "^8.3.3",
+    "sass": "^1.43.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
